# mac-app-positioner

./: .gitignore  CLAUDE.md  COORDINATE_SYSTEM_FINAL_SOLUTION.md  COORDINATE_SYSTEM_LIMITATIONS.md  DEVELOPMENT_DECISIONS.md  LICENSE  POSITIONING_LESSONS.md  PROJECT_REQUIREMENTS.md  README.md  TOOL_SELECTION_DECISIONS.md  UV_SETUP_GUIDE.md  config.yaml  main.py  pyproject.toml  test_monitor_detection.py  test_positioning_coordinates.py  test_pyautogui.py
docs/: AGENTS.md  ARCHITECTURE.md  COORDINATE_SYSTEMS.md  DEVELOPMENT.md  NATIVE_APP_GUIDE.md  SOLUTION_ARCHITECTURE.md  SYSTEM_PROFILE.md  TERMINOLOGY.md  TROUBLESHOOTING.md  TROUBLESHOOTING_COORDINATES.md  USAGE.md
mac_app_positioner/: __init__.py  __main__.py  application.py  config.py  display.py  profiles.py
tests/: test_config.yaml
